# proxay-pylibs

./: .gitignore  LICENSE  README.md  flake.nix  justfile  pyproject.toml
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json  postCreateCommand.sh
.github/: copilot-instructions.md
.github/instructions/: http-to-arrow.instructions.md  log-generator.instructions.md
.github/prompts/: build-project-plan.prompt.md  review-project-plan.prompt.md  start-package.prompt.md
.github/workflows/: publish-http-to-arrow.yml
src/http_to_arrow/: README.md  pyproject.toml
src/http_to_arrow/src/http_to_arrow/: __init__.py  collections.py  main.py
src/http_to_arrow/tests/: test_arrow_record_container.py
src/log_generator/: README.md  pyproject.toml
src/log_generator/src/log_generator/: __init__.py  cli.py
src/log_generator/src/log_generator/core/: __init__.py  base.py  engine.py  registry.py
src/log_generator/src/log_generator/providers/: __init__.py
src/log_generator/src/log_generator/providers/basic/: __init__.py  provider.py
src/log_generator/src/log_generator/providers/nginx/: __init__.py  provider.py
src/log_generator/src/log_generator/providers/nginx/examples/: __init__.py  main.py
src/log_generator/src/log_generator/providers/nginx/pools/: README.md  __init__.py  base.py  composite.py  conditional.py  counter.py  network.py  numeric.py  orchestrator.py  temporal.py  weighted.py
src/log_generator/src/log_generator/providers/nginx/pools/definitions/: __init__.py  connection.py  core.py  error.py  headers.py  request.py  response.py  ssl.py  time.py  upstream.py
src/log_generator/src/log_generator/utils/: __init__.py  time.py
src/log_generator/tests/: _nginx_test_helpers.py  test_cli.py  test_log_generator.py  test_nginx_formats.py  test_nginx_orchestrator.py  test_nginx_registry.py
src/log_generator/tests/core/: __init__.py  test_base.py  test_engine.py  test_registry.py
src/log_generator/tests/providers/: test_log_generator.py
src/log_generator/tests/providers/basic/: test_basic_provider.py
src/log_generator/tests/providers/nginx/: test_nginx_examples_script.py  test_nginx_formats.py  test_nginx_pool_primitives.py  test_nginx_registry.py  test_nginx_time.py
src/log_generator/tests/utils/: __init__.py  test_time.py
templates/python-package/: PACKAGE_README.md.template  README.md  pyproject.toml.template
templates/python-package/src/package_name/: __init__.py.template
templates/python-package/tests/: test_package_name.py.template
tests/: __init__.py
tests/http_to_arrow/: test_arrow_record_container.py
tests/log_generator/: __init__.py  test_cli.py
tests/log_generator/core/: test_engine.py  test_registry.py
tests/log_generator/providers/: __init__.py
tests/log_generator/providers/basic/: __init__.py
tests/log_generator/providers/nginx/: __init__.py  test_nginx_pool_primitives.py  test_nginx_shipping_rules.py
