[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "http-to-arrow"
version = "0.1.0"
description = "Stream HTTP data to Apache Arrow format for efficient processing and analytics."
authors = [{ name = "ProxayFox", email = "28168887+ProxayFox@users.noreply.github.com" }]
requires-python = ">=3.14"
readme = "README.md"
license = "MIT"
dependencies = [
    "polars>=1.39.3",
    "pyarrow>=23.0.1",
]

[tool.setuptools]
package-dir = { "http_to_arrow" = "." }
