[build-system]
requires = ["uv_build >= 0.11.7, <0.12.0"]
build-backend = "uv_build"

[project]
name = "http-to-arrow"
version = "0.1.2"
description = "Stream HTTP data to Apache Arrow format for efficient processing and analytics."
authors = [{ name = "ProxayFox", email = "28168887+ProxayFox@users.noreply.github.com" }]
requires-python = ">=3.14"
readme = "README.md"
license = "MIT"
dependencies = [
    "polars>=1.39.3",
    "pyarrow>=23.0.1",
]

[project.urls]
Homepage = "https://github.com/ProxayFox/proxay-pylibs/tree/main/src/http_to_arrow"
Issues = "https://github.com/ProxayFox/proxay-pylibs/issues"

[tool.setuptools]
package-dir = { "http_to_arrow" = "." }
